--- a/MyWorkDashboard/Client/MyWorkDashboard.Client.csproj
+++ b/MyWorkDashboard/Client/MyWorkDashboard.Client.csproj
@@ -6,11 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
-
+	<PropertyGroup>
+		<GHPages>true</GHPages>
+	</PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AntDesign" Version="0.10.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.5" PrivateAssets="all" />
+    <PackageReference Include="PublishSPAforGitHubPages.Build" Version="1.3.6" />
   </ItemGroup>
 
   <ItemGroup>
