--- a/DraftConsole/DraftConsole.csproj
+++ b/DraftConsole/DraftConsole.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MyWorkDashboard.Shared\MyWorkDashboard.Shared.csproj" />
     <ProjectReference Include="..\WorkBord\WorkBord.csproj" />
   </ItemGroup>
 
