--- a/WorkBord/WorkBord.csproj
+++ b/WorkBord/WorkBord.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <FileVersion>0.0.1.2</FileVersion>
+    <AssemblyVersion>0.0.1.2</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
