パッケージのバージョンアップ

--- a/MyWorkDesktop/MyWorkDesktop.csproj
+++ b/MyWorkDesktop/MyWorkDesktop.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="AntDesign" Version="0.10.7" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="6.0.300-rc.3.5667" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="6.0.312" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
