--- a/MyWorkDesktop/MyWorkDesktop.csproj
+++ b/MyWorkDesktop/MyWorkDesktop.csproj
@@ -75,7 +75,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="data\master.txt">
+    <None Update="data\master.tmplate">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Properties\Settings.settings">
