--- a/MyWorkDashboard/Client/MyWorkDashboard.Client.csproj
+++ b/MyWorkDashboard/Client/MyWorkDashboard.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,8 +8,8 @@
   </PropertyGroup>
 	<PropertyGroup>
 		<GHPages>true</GHPages>
-		<FileVersion>0.1.0.0</FileVersion>
-		<AssemblyVersion>0.1.0.0</AssemblyVersion>
+		<FileVersion>0.1.0.1</FileVersion>
+		<AssemblyVersion>0.1.0.1</AssemblyVersion>
 	</PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AntDesign" Version="0.11.0" />
